--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010200/tsl010200.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010200/tsl010200.component.html
@@ -28,9 +28,19 @@
             </div>
             <div class="item">
               <div class="menu">
-                <a class="item hover"> ความแตกต่างของภาษีระหว่างเดือนมากกว่าหรือเท่ากับร้อยละ</a>
-                <a class="item hover"> ความแตกต่างของภาษีระหว่างเดือนน้อยกว่าหรือเท่ากับร้อยละ</a>
-                <a class="item hover">ความแตกต่างของภาษีระหว่างเดือนเท่ากับร้อยละ</a>
+                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนมากกว่าหรือเท่ากับร้อยละ</div>
+                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนน้อยกว่าหรือเท่ากับร้อยละ</div>
+                <div class="item hover">ความแตกต่างของภาษีระหว่างเดือนเท่ากับร้อยละ</div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">เงื่อนไขที่ 3 เปรียบเทียบความแต่งต่างการชำระภาษีระหว่างปี เทียบกับ ปี</div>
+            </div>
+            <div class="item">
+              <div class="menu">
+                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนมากกว่าหรือเท่ากับร้อยละ</div>
+                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนน้อยกว่าหรือเท่ากับร้อยละ</div>
+                <div class="item hover">ความแตกต่างของภาษีระหว่างเดือนเท่ากับร้อยละ</div>
               </div>
             </div>
           </div>
@@ -51,23 +61,52 @@
                 <th class="text-center" colspan="12">การชำระภาษี (บาท)</th>
               </tr>
               <tr>
-                <th>ม.ค.</th>
-                <th>ก.พ.</th>
-                <th>มี.ค.</th>
-                <th>เม.ย.</th>
-                <th>พ.ค.</th>
-                <th>มิ.ย.</th>
-                <th>ก.ค.</th>
-                <th>ส.ค.</th>
-                <th>ก.ย.</th>
-                <th>ต.ค.</th>
-                <th>พ.ย.</th>
-                <th>ธ.ค.</th>
+                <th class="text-center">ม.ค.</th>
+                <th class="text-center">ก.พ.</th>
+                <th class="text-center">มี.ค.</th>
+                <th class="text-center">เม.ย.</th>
+                <th class="text-center">พ.ค.</th>
+                <th class="text-center">มิ.ย.</th>
+                <th class="text-center">ก.ค.</th>
+                <th class="text-center">ส.ค.</th>
+                <th class="text-center">ก.ย.</th>
+                <th class="text-center">ต.ค.</th>
+                <th class="text-center">พ.ย.</th>
+                <th class="text-center">ธ.ค.</th>
               </tr>
               <!-- table details-->
             </thead>
           </table>
           <br>
+          <table id="datatable2" class="ui small celled table aligned hover striped selectable nowrap" style="width: 100%;">
+              <thead id="tableOne">
+                <tr>
+                  <th rowspan="2" style="text-align: center !important"><input type="checkbox" name="select-all" id="select-all"></th>
+                  <th class="text-center" rowspan="2">เลขทะเบียนสรรพสามิต</th>
+                  <th class="text-center" rowspan="2">ชื่อผู้ประกอบการ/โรงอุตสาหกรรม</th>
+                  <th class="text-center" rowspan="2">ที่อยู่สถานบริการ/โรงอุตสาหกรรม</th>
+                  <th class="text-center" rowspan="2">พิกัดสินค้า/บริการ</th>
+                  <th class="text-center" rowspan="2">สรรพสามิตภาค</th>
+                  <th class="text-center" rowspan="2">สรรพสามิตพื้นที่</th>
+                  <th class="text-center" colspan="12">การชำระภาษี (บาท)</th>
+                </tr>
+                <tr>
+                  <th class="text-center">ม.ค.</th>
+                  <th class="text-center">ก.พ.</th>
+                  <th class="text-center">มี.ค.</th>
+                  <th class="text-center">เม.ย.</th>
+                  <th class="text-center">พ.ค.</th>
+                  <th class="text-center">มิ.ย.</th>
+                  <th class="text-center">ก.ค.</th>
+                  <th class="text-center">ส.ค.</th>
+                  <th class="text-center">ก.ย.</th>
+                  <th class="text-center">ต.ค.</th>
+                  <th class="text-center">พ.ย.</th>
+                  <th class="text-center">ธ.ค.</th>
+                </tr>
+                <!-- table details-->
+              </thead>
+            </table>
           <!-- button -->
           <div class="ui center aligned grid">
             <div class="six wide column">
