update checking tax

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010600/tsl010600.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010600/tsl010600.component.html
@@ -26,11 +26,24 @@
 </div>
 
 <!-- Modal -->
-<div class="ui modal" id="modalTsl">
-  <div class="header">Header</div>
+<div class="ui modal" id="modalTsl" style="width: 400px;">
+  <div class="header">เลือกเดือนที่ต้องการตรวจสอบข้อมูล</div>
   <div class="content">
-    <p></p>
-    <p></p>
-    <p></p>
+    <div class="ui calendar full-width" id="date" style="text-align: center;">
+      <div class="ui input left icon">
+        <i class="clock icon"></i>
+        <input id="dateCalendar" name="dateCalendar" type="text" autocomplete="off" [readonly]="true" placeholder="ดด/ปปปป">
+      </div>
+    </div>
+  </div>
+  <div class="actions">
+    <div class="ui primary button" (click)="onClickOK()">
+      <i class="edit icon"></i>
+      ตรวจสอบ
+    </div>
+    <div class="ui icon deny button">
+      <i class="close icon"></i>
+      ยกเลิก
+    </div>
   </div>
 </div>
