edited menu checking tax

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -196,6 +196,7 @@
         <i class="dropdown icon "></i>
         <div class="menu ">
             <a class="item " [routerLink]="[ 'tax-audit-select-line/tsl0101-00'] " routerLinkActive="active">การคัดเลือกราย</a>
+            <a class="item " [routerLink]="[ 'tax-audit-select-line/tsl0106-00'] " routerLinkActive="active">ตรวจสอบข้อมูล</a>
             <!-- <div class="ui dropdown item " routerLinkActive="active " *ngIf="authService.renderByPage('tax-audit-s1')">
                 <i class="dropdown icon "></i>การคัดเลือกราย
                 <div class="menu ">
