--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
@@ -3,7 +3,6 @@
 <form (submit)="onSubmit($event)" ngNativeValidate>
   <div class="ui grid">
     <div class="sixteen wide column">
-      <h2 class="ui header">รายงานผลการตรวจสอบรายได้</h2>
 
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
         <span>รายงานผลการตรวจสอบรายได้</span>
@@ -16,7 +15,7 @@
 
 
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="two wide field">
                   <label>ส่วนราชการ</label>
                 </div>
@@ -30,13 +29,13 @@
                 <div class="four wide field ui calendar" id="date1">
                   <div class="ui input left icon">
                     <i class="calendar alter nate outline icon"></i>
-                    <input type="calendar" id="date" name="date" [(ngModel)]="obj.date" autocomplete="off">
+                    <input type="calendar" placeholder="วว/ดด/ปปปป" id="date" name="date" [(ngModel)]="obj.date" autocomplete="off">
                   </div>
                 </div>
               </div>
 
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="two wide field">
                   <label>เรื่อง</label>
                 </div>
@@ -51,40 +50,43 @@
                   <input type="text" id="study" name="study" [(ngModel)]="obj.study">
                 </div>
               </div>
+              <br>
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="eight wide field">
                   <div class="ui checkbox">
                     <input type="checkbox" name="box1" [(ngModel)]="box1">
-                    <label>&nbsp;&nbsp;&nbsp;1)&nbsp;ใบเสร็จเสีย</label>
+                    <label>&nbsp;&nbsp;&nbsp;1)&nbsp;ผลการตรวจสอบใบเสร็จเสีย</label>
                   </div>
                 </div>
               </div>
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="twelve wide field" [ngClass]="{'disabled': !box1}">
                   <textarea  role="8" cols="10" [(ngModel)]="obj.billLost" id="billLost" name="billLost" maxlength="500"></textarea>
                 </div>
               </div>
+              <br>
 
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="eight wide field">
                   <div class="ui checkbox">
                     <input type="checkbox" name="box2" [(ngModel)]="box2">
-                    <label>&nbsp;&nbsp;&nbsp;2)&nbsp;นำส่งเงิน</label>
+                    <label>&nbsp;&nbsp;&nbsp;2)&nbsp;ผลการตรวจสอบการนำเงินฝากเข้าบัญชีพักพน่วยงานและกองทุน</label>
                   </div>
                 </div>
               </div>
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="twelve wide field" [ngClass]="{'disabled': !box2}">
                   <textarea role="8" cols="10" [(ngModel)]="obj.sendMoney" id="sendMoney" name="sendMoney" maxlength="500"></textarea>
                 </div>
               </div>
+              <br>
 
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="two wide field">
                   <label>ผู้ตรวจสอบ</label>
                 </div>
@@ -95,7 +97,7 @@
 
 
               <div class="inline fields">
-                <div class="three wide field"></div>
+                <div class="two wide field"></div>
                 <div class="two wide field">
                   <label>ตำแหน่ง</label>
                 </div>
