--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010200/tsl010200.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010200/tsl010200.component.html
@@ -13,34 +13,16 @@
       </div><br>
       <div class="ui grid" style="margin-top: 0">
         <div style="padding-right: 0;" [ngClass]="{'three wide column': !toggle, 'transition-left' : toggle}">
-          <div class="ui vertical menu" style="width: auto" name="coordinates" id="coordinates" (change)="changeCoordinates()">
+          <div class="ui vertical menu" style="width: auto" name="coordinates" id="coordinates" (change)="changeCoordinates()">            
             <div class="item">
-              <div class="header">เงื่อนไขที่ 1 ความถี่ของเดือนที่ชำระภาษี ตั้งแต่ เดือน {{dispaly.dateFrom}} ถึง
-                {{dispaly.dateTo}}</div>
+              <div class="header">เงื่อนไข</div>
             </div>
             <div class="item">
               <div class="menu">
-                <div class="item hover"> จำนวนเดือนที่ไม่ชำระภาษีติดต่อกัน {{dispaly.month}} เดือน</div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="header">เงื่อนไขที่ 2 เปรียบเทียบจำนวนภาษีระหว่างเดือน</div>
-            </div>
-            <div class="item">
-              <div class="menu">
-                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนมากกว่าหรือเท่ากับร้อยละ</div>
-                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนน้อยกว่าหรือเท่ากับร้อยละ</div>
-                <div class="item hover">ความแตกต่างของภาษีระหว่างเดือนเท่ากับร้อยละ</div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="header">เงื่อนไขที่ 3 เปรียบเทียบความแต่งต่างการชำระภาษีระหว่างปี เทียบกับ ปี</div>
-            </div>
-            <div class="item">
-              <div class="menu">
-                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนมากกว่าหรือเท่ากับร้อยละ</div>
-                <div class="item hover"> ความแตกต่างของภาษีระหว่างเดือนน้อยกว่าหรือเท่ากับร้อยละ</div>
-                <div class="item hover">ความแตกต่างของภาษีระหว่างเดือนเท่ากับร้อยละ</div>
+                <a class="item hover">เงื่อนไขที่ 1 ความถี่ของเดือนที่ชำระภาษี ตั้งแต่ เดือน {{dispaly.dateFrom}} ถึง
+                    {{dispaly.dateTo}}<br> จำนวนเดือนที่ไม่ชำระภาษีติดต่อกัน {{form.monthNonPay}}</a>
+                <a class="item hover"> เงื่อนไขที่ 2 เปรียบเทียบจำนวนภาษีระหว่างเดือน</a>
+                <a class="item hover">เงื่อนไขที่ 3 เปรียบเทียบความแต่งต่างการชำระภาษีระหว่างปี เทียบกับ ปี</a>
               </div>
             </div>
           </div>
@@ -51,7 +33,7 @@
           <table id="datatable1" class="ui small celled table aligned hover striped selectable nowrap" style="width: 100%;">
             <thead id="tableOne">
               <tr>
-                <th rowspan="2" style="text-align: center !important"><input type="checkbox" name="select-all" id="select-all"></th>
+                <th rowspan="2" style="text-align: center !important"><input type="checkbox" class="ui checkbox " name="select-all" id="select-all"></th>
                 <th class="text-center" rowspan="2">เลขทะเบียนสรรพสามิต</th>
                 <th class="text-center" rowspan="2">ชื่อผู้ประกอบการ/โรงอุตสาหกรรม</th>
                 <th class="text-center" rowspan="2">ที่อยู่สถานบริการ/โรงอุตสาหกรรม</th>
@@ -82,15 +64,15 @@
               <thead id="tableOne">
                 <tr>
                  
-                  <th class="text-center" rowspan="2">เลขทะเบียนสรรพสามิต</th>
-                  <th class="text-center" rowspan="2">ชื่อผู้ประกอบการ/โรงอุตสาหกรรม</th>
-                  <th class="text-center" rowspan="2">ที่อยู่สถานบริการ/โรงอุตสาหกรรม</th>
-                  <th class="text-center" rowspan="2">พิกัดสินค้า/บริการ</th>
-                  <th class="text-center" rowspan="2">สรรพสามิตภาค</th>
-                  <th class="text-center" rowspan="2">สรรพสามิตพื้นที่</th>
-                  <th class="text-center" colspan="12">การชำระภาษี (บาท)</th>
+                  <th class="text-center">เลขทะเบียนสรรพสามิต</th>
+                  <th class="text-center">ชื่อผู้ประกอบการ/โรงอุตสาหกรรม</th>
+                  <th class="text-center">ที่อยู่สถานบริการ/โรงอุตสาหกรรม</th>
+                  <th class="text-center">พิกัดสินค้า/บริการ</th>
+                  <th class="text-center">สรรพสามิตภาค</th>
+                  <th class="text-center">สรรพสามิตพื้นที่</th>
+                  
                 </tr>
-                <tr>
+                <!-- <tr>
                   <th class="text-center">ม.ค.</th>
                   <th class="text-center">ก.พ.</th>
                   <th class="text-center">มี.ค.</th>
@@ -103,7 +85,7 @@
                   <th class="text-center">ต.ค.</th>
                   <th class="text-center">พ.ย.</th>
                   <th class="text-center">ธ.ค.</th>
-                </tr>
+                </tr> -->
                 <!-- table details-->
               </thead>
             </table>
