--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -4,6 +4,8 @@
   <span>ตรวจสอบข้อมูลด้านภาษีสรรพาสามิต</span>
 </div>
 
+<input type="hidden" id="searchFlag" name="searchFlag">
+
 <!-- Segment I -->
 <div class="ui attached segment">
   <div class="ui grid center aligned">
@@ -84,62 +86,6 @@
   <br />
   <div class="ui grid center aligned">
     <div class="sixteen wide column">
-      <h4>ข้อมูลใบกำกับภาษี</h4>
-    </div>
-  </div>
-  <br>
-
-  <table id="tableEntrepreneur" class="ui small celled table nowrap striped selectable" style="width: 100%;">
-    <thead>
-      <tr>
-        <th style="text-align: center !important;">ลำดับ</th>
-        <th style="text-align: center !important;">วัน เดือน ปี ที่ออกใบกำกับภาษี</th>
-        <th style="text-align: center !important;">เล่มที่/เลขที่</th>
-        <th style="text-align: center !important;">รายการสินค้า</th>
-        <th style="text-align: center !important;">ราคาต่อหน่วย</th>
-        <th style="text-align: center !important;">จำนวนเงิน</th>
-        <th style="text-align: center !important;">รวมทั้งสิ้น (ราคารวมภาษีมูลค่าเพิ่ม)</th>
-      </tr>
-    </thead>
-  </table>
-  <br />
-  <div id="" class="ui form">
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <label>ผลการตรวจสอบ :</label>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="eight wide field ">
-        <textarea rows="5"></textarea>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <div class="ui radio checkbox">
-          <input type="radio" name="resultEntrepreneur" value="0" [checked]="true">
-          <label>ข้อมูลถูกต้อง</label>
-        </div>
-      </div>
-      <div class="two wide field ">
-        <div class="ui radio checkbox">
-          <input type="radio" name="resultEntrepreneur" value="1">
-          <label>ข้อมูลไม่ถูกต้อง</label>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-<!-- Datatable II -->
-<div class="ui segment" style="width: 100%;">
-  <br />
-  <div class="ui grid center aligned">
-    <div class="sixteen wide column">
       <h4>ข้อมูลการรับวัตถุดิบ</h4>
     </div>
   </div>
@@ -190,7 +136,7 @@
 
 </div>
 
-<!-- Datatable III -->
+<!-- Datatable II -->
 <div class="ui segment" style="width: 100%;">
   <br />
   <div class="ui grid center aligned">
@@ -206,9 +152,10 @@
         <th style="text-align: center !important;">ลำดับ</th>
         <th style="text-align: center !important;">รายการวัตถุดิบ</th>
         <th style="text-align: center !important;">หน่วยวัตถุดิบ</th>
-        <th style="text-align: center !important;">ยอดคงเหลือยกมา</th>
-        <th style="text-align: center !important;">รับเดือนนี้</th>
-        <th style="text-align: center !important;">รวม</th>
+        <th style="text-align: center !important;">ผลิตสินค้าตามพิกัด</th>
+        <th style="text-align: center !important;">ผลิตสินค้าอื่น</th>
+        <th style="text-align: center !important;">เสียหาย</th>
+        <th style="text-align: center !important;">อื่นๆ</th>
       </tr>
     </thead>
   </table>
@@ -237,6 +184,104 @@
       <div class="two wide field ">
         <div class="ui radio checkbox">
           <input type="radio" name="resultPayRaw" value="1">
+          <label>ข้อมูลไม่ถูกต้อง</label>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ui segment" style="width: 100%;">
+  <br />
+  <div class="ui grid center aligned">
+    <div class="sixteen wide column">
+      <h4>ข้อมูลใบกำกับภาษี</h4>
+    </div>
+  </div>
+  <br />
+  <div id="" class="ui form">
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="two wide field ">
+        <label>ข้อมูลใบกำกับภาษีทั้งหมด: </label>
+      </div>
+      <div class="two wide field ">
+        <input type="text">
+        <label> &nbsp; ฉบับ</label>
+      </div>
+    </div>
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="two wide field ">
+        <label>ผลการตรวจสอบ :</label>
+      </div>
+    </div>
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="eight wide field ">
+        <textarea rows="5"></textarea>
+      </div>
+    </div>
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="two wide field ">
+        <div class="ui radio checkbox">
+          <input type="radio" name="taxInvoice" value="0" [checked]="true">
+          <label>ข้อมูลถูกต้อง</label>
+        </div>
+      </div>
+      <div class="two wide field ">
+        <div class="ui radio checkbox">
+          <input type="radio" name="taxInvoice" value="1">
+          <label>ข้อมูลไม่ถูกต้อง</label>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ui segment" style="width: 100%;">
+  <br />
+  <div class="ui grid center aligned">
+    <div class="sixteen wide column">
+      <h4>ข้อมูลบัญชีงบดุล</h4>
+    </div>
+  </div>
+  <br />
+  <div id="" class="ui form">
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="two wide field ">
+        <label>บัญชีงบดุล: </label>
+      </div>
+      <div class="two wide field ">
+        <input type="text">
+        <label> &nbsp; ฉบับ</label>
+      </div>
+    </div>
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="two wide field ">
+        <label>ผลการตรวจสอบ :</label>
+      </div>
+    </div>
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="eight wide field ">
+        <textarea rows="5"></textarea>
+      </div>
+    </div>
+    <div class="inline fields">
+      <div class="four wide field"></div>
+      <div class="two wide field ">
+        <div class="ui radio checkbox">
+          <input type="radio" name="balanceAccount" value="0" [checked]="true">
+          <label>ข้อมูลถูกต้อง</label>
+        </div>
+      </div>
+      <div class="two wide field ">
+        <div class="ui radio checkbox">
+          <input type="radio" name="balanceAccount" value="1">
           <label>ข้อมูลไม่ถูกต้อง</label>
         </div>
       </div>
