--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -161,7 +161,7 @@
                     <a class="item " [routerLink]="[ '/int06/11'] " *ngIf="authService.renderByPage('int06/11')" routerLinkActive="active"> บันทึกคำขอเบิก</a>
                     <a class="item " [routerLink]="[ '/int06/11/5'] " *ngIf="authService.renderByPage('int06/11/5')" routerLinkActive="active">ตรวจสอบหลักฐานการขอเบิก และทำใบขอเบิก</a>
                     <a class="item " [routerLink]="[ '/int06/11/9'] " *ngIf="authService.renderByPage('int06/11/9')" routerLinkActive="active">ตรวจสอบหลักฐานการขอเบิก และอนุมัติการขอเบิก</a>
-                    <a class="item " [routerLink]="[ '/int06/11/6'] " *ngIf="authService.renderByPage('int06/11/6')" routerLinkActive="active">ทำเลขที่อ้างอิงใบขอเบิก ขอจ่าย</a>
+                    <a class="item " [routerLink]="[ '/int06/11/6'] " *ngIf="authService.renderByPage('int06/11/6')" routerLinkActive="active">บันทึกเลขที่อ้างอิงใบขอเบิก ขอจ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/11/8'] " *ngIf="authService.renderByPage('int06/11/8')" routerLinkActive="active">เปรียบเทียบใบขอเบิก ขอจ่าย และอนุมัติจ่าย</a>
                     <!-- <a class="item " [routerLink]="[ '/int06/9'] " *ngIf="authService.renderByPage('int06/9')" routerLinkActive="active "> บันทึกข้อมูลรับโอนเงิน</a>
                     <a class="item " [routerLink]="[ '/int06/10'] " *ngIf="authService.renderByPage('int06/10')" routerLinkActive="active ">บันทึกข้อมูลเบิกจ่าย</a>
