--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-6/int06-11-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-6/int06-11-6.component.html
@@ -1,5 +1,5 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
-<h2>ทำเลขที่อ้างอิงใบขอเบิก ขอจ่าย</h2>
+<br>
 <div class="sixteen wide column">
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ระบุเงื่อนไขในการค้นหา</span>
@@ -44,8 +44,8 @@
             <th style="text-align: center !important;">เลขที่ทำการ</th>
             <th style="text-align: center !important;">เลขที่ใบขอเบิก</th>
             <th style="text-align: center !important;">ผู้สร้างใบขอเบิก</th>
-            <th style="text-align: center !important;">ตำแหน่ง</th>
-            <th style="text-align: center !important;">สังกัด</th>
+            <!-- <th style="text-align: center !important;">ตำแหน่ง</th>
+            <th style="text-align: center !important;">สังกัด</th> -->
             <th style="text-align: center !important;">วันที่สร้างใบขอเบิก</th>
             <th style="text-align: center !important;">จำนวนเงินที่ขอเบิก</th>
             <th style="text-align: center !important;">ประเภทการขอเบิก</th>
