--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
@@ -74,7 +74,7 @@
       <thead>
         <tr>
           <th style="text-align: center !important;">ลำดับที่</th>
-          <th style="text-align: center !important;">รหัสสำนักงานสรรพสามิต</th>
+          <!-- <th style="text-align: center !important;">รหัสสำนักงานสรรพสามิต</th> -->
           <th style="text-align: center !important;">ชื่อสำนักงานสรรพสามิต</th>
           <th style="text-align: center !important;">ช่วงเดือนที่</th>
           <th style="text-align: center !important;">ถึงเดือนที่</th>
