--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
@@ -1,5 +1,5 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
-<h2>ตรวจสอบหลักฐานการขอเบิก และทำใบขอเบิก</h2>
+<br>
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ระบุเงื่อนไขในการค้นหา</span>
 </div>
@@ -142,8 +142,8 @@
                         <th class="text-center">เลขที่ทำการ</th>
                         <th class="text-center">เลขที่ใบขอเบิก</th>
                         <th class="text-center">ผู้สร้างใบขอเบิก</th>
-                        <th class="text-center">ตำแหน่ง</th>
-                        <th class="text-center">สังกัด</th>
+                        <!-- <th class="text-center">ตำแหน่ง</th>
+                        <th class="text-center">สังกัด</th> -->
                         <th class="text-center">วันที่สร้างใบขอเบิก</th>
                         <th class="text-center">จำนวนเงินที่ขอเบิก</th>
                     </tr>
@@ -153,8 +153,8 @@
                         <td class="text-center">{{groupData.id}}</td>
                         <td class="text-center">{{groupData.billLading===''? '-':groupData.billLading}}</td>
                         <td>{{groupData.createdBy}}</td>
-                        <td>{{groupData.position}}</td>
-                        <td class="{{groupData.affiliation===''?'text-center':''}}">{{groupData.affiliation===''?'-':groupData.affiliation}}</td>
+                        <!-- <td>{{groupData.position}}</td>
+                        <td class="{{groupData.affiliation===''?'text-center':''}}">{{groupData.affiliation===''?'-':groupData.affiliation}}</td> -->
                         <td class="text-center">{{groupData.createdDateStr}}</td>
                         <td class="text-right">{{groupData.amount}}</td>
                     </tr>
